--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "files.associations": {
-    "erastothenes.h": "c"
+    "erastothenes.h": "c",
+    "bitset": "c",
+    "initializer_list": "c",
+    "type_traits": "c",
+    "xstring": "c",
+    "xutility": "c"
   }
 }
